@@ -409,24 +409,31 @@ logdebug(char *fmt, ...)
 void
 kbd_set_fnmode(void)
 {
-  int errno1;
+  char *fnmode_node[] =
+    {
+      "/sys/module/hid_apple/parameters/fnmode", /* 2.6.28 & up */
+      "/sys/module/hid/parameters/pb_fnmode",    /* 2.6.20 & up */
+      "/sys/module/usbhid/parameters/pb_fnmode"
+    };
   FILE *fp;
+  int i;
 
   if ((general_cfg.fnmode < 1) || (general_cfg.fnmode > 2))
     general_cfg.fnmode = 1;
 
-  fp = fopen(KBD_FNMODE_FILE, "a");
-  if (fp == NULL)
+  for (i = 0; i < sizeof(fnmode_node) / sizeof(*fnmode_node); i++)
     {
-      errno1 = errno;
+      logdebug("Trying %s\n", fnmode_node[i]);
 
-      fp = fopen(KBD_FNMODE_FILE2620, "a");
-      if (fp == NULL)
-        {
-          logmsg(LOG_INFO, "Could not open %s: %s", KBD_FNMODE_FILE, strerror(errno1));
-          logmsg(LOG_INFO, "Could not open %s: %s", KBD_FNMODE_FILE2620, strerror(errno));
-          return;
-        }
+      fp = fopen(fnmode_node[i], "a");
+      if (fp != NULL)
+	break;
+
+      if (errno == ENOENT)
+	continue;
+
+      logmsg(LOG_INFO, "Could not open %s: %s", fnmode_node[i], strerror(errno));
+      return;
     }
 
   fprintf(fp, "%d", general_cfg.fnmode);
